syntax = "proto3";

package pb;

import "pb/common.proto";

message NetworkName {
    string id = 1;
}

message NetworkCreateReq {
    string name = 1;
    string subnet = 2;
    string gateway = 3;
}

message NetworkCreateResp {
    string id = 1;
    Error  error = 2;
}

message NetworkDeleteReq {
    string name = 1;
    bool force = 2;
}

message NetworkDeleteResp {
    Error error = 1;
}

message NetworkInspectReq {
    string name = 1;
}

message NetworkInspectResp {
    Error error = 1;
    string net_info = 2;
}